SERVER-50192: use better return error message when --replSet and --repair used together